--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "my-node-app",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "mocha tests/*.test.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
